# PureBeurre

./: .coveragerc  .travis.yml  1  Procfile  README.md  diagramme_entite_association_PureBeurre.drawio  newrelique.ini  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt
.github/workflows/: django.yml
documentation/: P5_08_demarche.odt  P8_01_demarche.odt  P8_02_plan de tests.odt  diagramme_cas_utilisation.drawio  diagramme_entite_association_PureBeurre.drawio  plan de tests.odt  presentation.odp
homepage/: forms.py
homepage/templates/: base.html  homepage.html
homepage/tests/: test_homePage_urls.py  test_homePage_views.py
products/: algoSubtitution.py  urls.py
products/migrations/: 0001_initial.py  0002_auto_20210929_1719.py  0002_initial.py  0004_auto_20211014_1124.py
products/templates/: choice_subtitution.html
products/tests/: test_products_algoSubtitution.py
pureBeurre/: settings.py  travis.py
spaceUser/: form.py
spaceUser/migrations/: 0001_initial.py
spaceUser/templates/: register.html
spaceUser/tests/: test_spaceUser_views.py
src/: .coveragerc  local_setting.py
src/homepage/: forms.py  tests.py  urls.py  views.py
src/products/: admin.py  algoSubtitution.py  models.py  tests.py  urls.py  views.py
src/pureBeurre/: settings.py  urls.py
src/spaceUser/: admin.py  form.py  models.py  tests.py  urls.py  views.py
src/tests_functional/: test_identification.py
src/tests_integration/: test_identification.py
staticfiles/: staticfiles.json
staticfiles/css/: styles.css.br  (+10 more)
tests_functional/: test_identification.py
(+45 files in other folders)
