[tool.poetry]
name = "purebeurre"
version = "0.1.0"
description = ""
authors = ["jbbaillet <jbbaillet.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.2.7"
requests = "^2.26.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
pytest-django = "^4.4.0"
pytest-mock = "^3.6.1"
selenium = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
